@@ -1,3 +1,8 @@
+2008-04-04  Badlop  <badlop@process-one.net>
+
+	* src/mod_ctlextra.erl: Added new command
+	rosteritem-purge [options]
+
 2008-03-19  Badlop  <badlop@process-one.net>
 
 	* src/mod_ctlextra.erl: Added two new commands for administration
